# fare-estimator

./: README.md  main.py  pyproject.toml
src/fare_client/: cli.py  estimator.py  fare_errors.py  utils.py
tutorials/: README.md  fare_v1.py  fare_v2.py  fare_v3.py  fare_v4.py  grocery.py  ollama_cli.py  payment.py  weather.py
